# plate-tectonics-c-sharp

./: CMakeLists.txt  README.md
.github/workflows/: push.yml
examples/: map_drawing.cpp
src/: platecapi.hpp
test/: CMakeLists.txt
